2025-09-29T01:18:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18082776293 # 781
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-29
* notice: last 14d: unq all: 8 16
* notice: prev accum: outdated-unq outdated-all / unq all: 1105 1585 / 1120 1600
* notice: next accum: outdated-unq outdated-all / unq all: 1106 1586 / 1122 1602
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-09-15] / [2025-09-28]

2025-09-28T01:23:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18067398189 # 780
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
* notice: last 14d: unq all: 7 15
* notice: prev accum: outdated-unq outdated-all / unq all: 1104 1584 / 1119 1599
* notice: next accum: outdated-unq outdated-all / unq all: 1105 1585 / 1120 1600
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-14] / [2025-09-27]

2025-09-27T01:13:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18052955496 # 779
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-27
* notice: last 14d: unq all: 7 15
* notice: prev accum: outdated-unq outdated-all / unq all: 1103 1583 / 1118 1598
* notice: next accum: outdated-unq outdated-all / unq all: 1104 1584 / 1119 1599
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-13] / [2025-09-26]

2025-09-26T01:16:28Z: