@@ -1,11 +1,11 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 8,
   "clones": [
     {
       "timestamp": "2025-09-16T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-09-17T00:00:00Z",
@@ -61,6 +61,16 @@
       "timestamp": "2025-09-28T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
