@@ -1,3 +1,12 @@
+2025-09-30T01:17:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18115513121 # 782
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-30
+* notice: last 14d: unq all: 8 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 1106 1586 / 1122 1602
+* notice: next accum: outdated-unq outdated-all / unq all: 1106 1586 / 1124 1604
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-09-16 2025-09-29 2025-09-30]
+
 2025-09-29T01:18:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18082776293 # 781
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-29
